add profiles for java 21 and auto-modules